techpack/audio: makefile: Apply 28957ce4bbf307ef40d369f9025ba74f69c266e0 for CONFIG_ARCH_{SM6150|SDMMAGPIE}
Change-Id: I66f8668d8415d0d3e4380ab71dd06cccaab0ca92

--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -17,11 +17,11 @@ export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdxpoorwillsauto.c
 endif
 ifeq ($(CONFIG_ARCH_SM6150), y)
 include $(srctree)/techpack/audio/config/sm6150auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm6150auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 include $(srctree)/techpack/audio/config/sm6150auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm6150auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SM8150), y)
 include $(srctree)/techpack/audio/config/sm8150auto.conf
